updated http example