@@ -1,11 +1,8 @@
 
-package was java.net.http, was moved to package jdk.incubator.http (as of EA b149)
-
-// javadoc is NOT in regular javadoc
-// but still built with regular javadoc and available at
-http://download.java.net/java/jdk9/docs/jre/api/incubator/httpclient/spec/index.html
+// javadoc is available at
+https://docs.oracle.com/javase/9/docs/api/jdk/incubator/http/HttpClient.html
 
 // to run with the incubator module, need to explicitly add it
-javac Main.java
+javac --add-modules jdk.incubator.httpclient Main.java
 java --add-modules jdk.incubator.httpclient Main
 
